force-app/main/default/objects/Constant_Exchange_Rates__c/Constant_Exchange_Rates__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Constant Exchange Rates</label>
</CustomObject>