force-app/main/default/objects/Constant_Exchange_Rates__c/fields/EUR2CHF__c.field-meta.xml
<CustomField>
    <fullName>EUR2CHF__c</fullName>
    <label>EUR2CHF</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>