force-app/main/default/objects/Constant_Exchange_Rates__c/fields/JPY2CHF__c.field-meta.xml
<CustomField>
    <fullName>JPY2CHF__c</fullName>
    <label>JPY2CHF</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>